--- a/src/main/resources/templates/fragments/adminSidebar.html
+++ b/src/main/resources/templates/fragments/adminSidebar.html
@@ -3,7 +3,7 @@
     <!-- Sidebar-->
     <div class="border-end bg-white" id="sidebar-wrapper">
         <div class="sidebar-heading border-bottom bg-light">
-            <a class=text-decoration-none href="/home">Archive B</a>
+            <a class="text-decoration-none" href="/home">Archive B</a>
         </div>
         <div class="list-group list-group-flush">
             <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/admin/books/list">Book List</a>
