--- a/src/main/resources/templates/books/adminDetail.html
+++ b/src/main/resources/templates/books/adminDetail.html
@@ -22,6 +22,10 @@
       <input type="text"  th:field="*{author}" id="author" class="form-control">
     </div>
     <div class="mb-3 form-group">
+      <label th:for="publisher" class="form-label">출판사</label>
+      <input type="text"  th:field="*{publisher}" id="publisher" class="form-control">
+    </div>
+    <div class="mb-3 form-group">
       <label th:for="category" class="form-label">카테고리</label>
       <select id="categoryInput" name="category" >
         <option  th:each="category : ${T(jpabook.archiveB.domain.Category).values()}"
