--- a/src/main/resources/templates/members/adminMemberList.html
+++ b/src/main/resources/templates/members/adminMemberList.html
@@ -1,8 +1,8 @@
 
 <html xmlns:th="http://www.thymeleaf.org" layout:decorate="~{adminLayout}" xmlns:layout="http://www.w3.org/1999/xhtml">
 <div layout:fragment="content" class="container my-3">
-  <table>
-    <thead>
+  <table class="table">
+    <thead class="thead-light">
     <tr>
       <th>이름</th>
       <th>email</th>
