--- a/src/main/resources/templates/books/adminBookList.html
+++ b/src/main/resources/templates/books/adminBookList.html
@@ -1,7 +1,8 @@
 
 <html xmlns:th="http://www.thymeleaf.org" layout:decorate="~{adminLayout}" xmlns:layout="http://www.w3.org/1999/xhtml">
+<body>
 <div layout:fragment="content" class="container my-3">
-  <table>
+  <table class="table table-striped">
     <thead>
     <tr>
       <th>제목</th>
@@ -9,11 +10,24 @@
     </tr>
     </thead>
     <tbody>
-    <tr th:each="list : ${books}" >
-
-      <td><a th:href="@{'/admin/books/'+${list.id}}"><span th:text="${list.title}"> </span> </a></td>
-      <td><span th:text="${list.author}"> </span></td>
+    <tr th:each="list : ${books}">
+      <td><a class="text-decoration-none text-black" th:href="@{'/admin/books/'+${list.id}}"><span th:text="${list.title}"></span></a></td>
+      <td><span th:text="${list.author}"></span></td>
     </tr>
     </tbody>
   </table>
+  <ul class="pagination justify-content-center">
+
+    <li class="page-item" th:classappend="${currentPage == 0} ? 'disabled'">
+      <a class="page-link" th:href="@{/admin/books/list(page=${currentPage - 1})}" th:text="Previous"></a>
+    </li>
+    <li th:each="pageNumber : ${#numbers.sequence(0, totalPages)}"
+        th:classappend="${pageNumber == currentPage} ? 'page-item active' : 'page-item'">
+      <a class="page-link" th:href="@{/admin/books/list(page=${pageNumber})}" th:text="${pageNumber}"></a>
+    </li>
+    <li class="page-item" th:classappend="${currentPage == totalPages} ? 'disabled'">
+      <a class="page-link" th:href="@{/admin/books/list(page=${currentPage + 1})}" th:text="Next"></a>
+    </li>
+  </ul>
 </div>
+</body>
